--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<!doctype html>
 
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Web bluetooth</title>
+</head>
+
+<body>
+  <script></script>
+</body>
+</html>
