--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <body>
   <input id="optionalServices" value="4fafc201-1fb5-459e-8fcc-c5c9c331914b" />
   <script>
-async function init() {
+    
+    log(s) => console.log(s);
+
+    async function init() {
   // Validate services UUID entered by user first.
   let optionalServices = document.querySelector('#optionalServices').value
     .split(/, ?/).map(s => s.startsWith('0x') ? parseInt(s) : s)
