--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <input id="optionalServices" value="4fafc201-1fb5-459e-8fcc-c5c9c331914b" />
   <script>
     
-    log(s) => console.log(s);
+    log = (s) => console.log(s);
 
     async function init() {
   // Validate services UUID entered by user first.
