--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <body>
   <input id="optionalServices" value="4fafc201-1fb5-459e-8fcc-c5c9c331914b" />
+  <button onclick="init()">init()</button>
   <script>
     
     log = (s) => console.log(s);
